fixed component spacing application page

--- a/pages/application.module.css
+++ b/pages/application.module.css
@@ -5,12 +5,13 @@
 
 .mainComponents {
   display: flex;
-  max-width: 700px;
   transition: 1000ms;
+  justify-content: space-between;
 }
 
 .middleComponent {
   padding: 0 10px;
+max-width: 800px;
 }
 
 .stacksSVG {
